Prevent border radius on iOS

--- a/src/app/components/search-form/search-form.component.scss
+++ b/src/app/components/search-form/search-form.component.scss
@@ -12,6 +12,7 @@
   &__input {
     width: 100%;
     font-size: 1rem;
+    border-radius: 0;
   }
 }
 
